# flying-bird-RustWasm-Game

./: .gitignore  Cargo.toml  README.md  index.css  index.html  package.json
Components/: home-game-page.html  start-game-page.html
Components/Background/: background.css  background.html
src/: index.ts  lib.rs
src/Game/: Game.ts  mod.rs
src/Game/Bird/: Bird.rs  Bird.ts
src/Game/Obstacle/: Obstacle.ts  mod.rs
src/Router/: Router.ts
src/Utils/: Pubsub.ts  Utils.ts
