[package]
name = "flappybird-Rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.70", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
] }
[profile.release]
debug = true
